--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "next": "13.5.8",
+    "peerjs": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.8",
     "postcss": "^8",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
