--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "peerjs": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "2.13.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3"
