--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.469.0",
     "next": "13.5.8",
     "peerjs": "^1.5.1",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-player": "2.13.0",
     "socket.io": "^4.8.1",
